New appointment queueing system, shops locator, and minor in-line code fixes. Minor fixes on ui/ux design also.