@@ -2,24 +2,24 @@ package com.example.barberuapplication;
 
 import android.annotation.SuppressLint;
 import android.app.AlertDialog;
-import android.app.DatePickerDialog;
 import android.app.TimePickerDialog;
 import android.content.Intent;
+import android.graphics.Color;
 import android.os.AsyncTask;
+import android.os.Build;
 import android.os.Bundle;
 import android.util.Log;
+import android.view.LayoutInflater;
 import android.view.View;
-import android.widget.AdapterView;
-import android.widget.ArrayAdapter;
 import android.widget.Button;
+import android.widget.CalendarView;
 import android.widget.ImageView;
-import android.widget.Spinner;
 import android.widget.TextView;
 import android.widget.Toast;
 
+import androidx.annotation.RequiresApi;
 import androidx.appcompat.app.AppCompatActivity;
 
-import org.json.JSONArray;
 import org.json.JSONException;
 import org.json.JSONObject;
 
@@ -32,115 +32,160 @@ import java.io.OutputStreamWriter;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
-import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 
 public class HairstyleConfirm extends AppCompatActivity {
 
     private static final String BASE_URL = Config.BASE_URL;
+
+    /** @noinspection FieldCanBeLocal*/
     private ImageView returnButton;
-    private TextView customerNameInput;
-    private Spinner haircutNameInput, haircutColorInput, shaveInput, branchInput, barberInput;
-    private List<String> haircutNames = new ArrayList<>();
-    private List<String> haircutColors = new ArrayList<>();
-    private TextView datetimePicker;
+    private TextView customerNameInput, haircutNameInput, haircutColorInput, shaveInput,
+            branchInput, barberInput, datetimePicker;
+
+    /** @noinspection FieldCanBeLocal*/
     private Button confirmButton;
-    private Map<String, Integer> barbershopMap = new HashMap<>();
-    private List<String> barbershopNames = new ArrayList<>();
-    private List<String> barberNames = new ArrayList<>();
+    private String[] availableDays;
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
         setContentView(R.layout.activity_hairstyleconfirm);
 
+        // Initialize views
         returnButton = findViewById(R.id.return_button_confirm);
         customerNameInput = findViewById(R.id.customer_name_input);
         haircutNameInput = findViewById(R.id.haircut_name_input);
         haircutColorInput = findViewById(R.id.haircut_color_input);
+        shaveInput = findViewById(R.id.shave_input);
         branchInput = findViewById(R.id.branch_input);
         barberInput = findViewById(R.id.barber_input);
-        shaveInput = findViewById(R.id.shave_input);
         datetimePicker = findViewById(R.id.datetime_picker);
         confirmButton = findViewById(R.id.confirm_button);
 
+        // Get data from intent
+        Intent intent = getIntent();
+        String haircutName = intent.getStringExtra("selectedHaircutName");
+        String shopName = intent.getStringExtra("shopName");
+        String barberName = intent.getStringExtra("barberName");
+        String availabilityDays = intent.getStringExtra("availabilityDays");
+
+        if (availabilityDays != null) {
+            availableDays = availabilityDays.split(",\\s*");
+        }
+
+        if (haircutName != null) haircutNameInput.setText(haircutName);
+        if (shopName != null) branchInput.setText(shopName);
+        if (barberName != null) barberInput.setText(barberName);
+
+        // Set customer name
         String fullname = getSharedPreferences("UserPrefs", MODE_PRIVATE)
                 .getString("fullname", "User");
         customerNameInput.setText(fullname);
 
-        new FetchBarbershopsTask().execute();
-
-        datetimePicker.setOnClickListener(v -> showDateTimePickerDialog());
-
-        branchInput.setOnItemSelectedListener(new AdapterView.OnItemSelectedListener() {
-            @Override
-            public void onItemSelected(AdapterView<?> parent, View view, int position, long id) {
-                String selectedBranchName = barbershopNames.get(position);
-                Integer shopID = barbershopMap.get(selectedBranchName);
-                if (shopID != null) {
-                    new FetchHaircutsTask().execute(String.valueOf(shopID));
-                    new FetchBarbersTask().execute(String.valueOf(shopID));
-                }
-            }
-
-            @Override
-            public void onNothingSelected(AdapterView<?> parent) {
-            }
-        });
-
+        datetimePicker.setOnClickListener(v -> showCustomDatePickerDialog());
         returnButton.setOnClickListener(v -> finish());
         confirmButton.setOnClickListener(v -> checkAndSaveAppointment());
     }
 
-    private void showDateTimePickerDialog() {
-        final Calendar c = Calendar.getInstance();
-        int year = c.get(Calendar.YEAR);
-        int month = c.get(Calendar.MONTH);
-        int day = c.get(Calendar.DAY_OF_MONTH);
+    @SuppressLint("SetTextI18n")
+    private void showCustomDatePickerDialog() {
+        if (availableDays == null || availableDays.length == 0) {
+            Toast.makeText(this, "No schedule found for this barber.", Toast.LENGTH_SHORT).show();
+            return;
+        }
 
-        DatePickerDialog datePickerDialog = new DatePickerDialog(this,
-                (view, selectedYear, selectedMonth, selectedDay) ->
-                        showTimePickerDialog(selectedYear, selectedMonth, selectedDay),
-                year, month, day);
+        LayoutInflater inflater = LayoutInflater.from(this);
+        View dialogView = inflater.inflate(R.layout.custom_date_picker, null);
+        CalendarView calendarView = dialogView.findViewById(R.id.customCalendarView);
 
-        datePickerDialog.getDatePicker().setMinDate(c.getTimeInMillis());
+        AlertDialog.Builder builder = new AlertDialog.Builder(this);
+        builder.setView(dialogView)
+                .setTitle("Select Date")
+                .setNegativeButton("Cancel", null);
 
-        datePickerDialog.show();
+        AlertDialog dialog = builder.create();
+
+        // Restrict to today and onward
+        Calendar today = Calendar.getInstance();
+        calendarView.setMinDate(today.getTimeInMillis());
+
+        // Handle user selecting a day
+        calendarView.setOnDateChangeListener((view, year, month, dayOfMonth) -> {
+            Calendar selected = Calendar.getInstance();
+            selected.set(year, month, dayOfMonth);
+            String dayName = new SimpleDateFormat("EEEE", Locale.US).format(selected.getTime());
+
+            if (isAvailableDay(dayName)) {
+                // ✅ Flash the view briefly in green to show valid selection
+                view.setBackgroundColor(Color.parseColor("#CCFFCC"));
+                view.postDelayed(() -> view.setBackgroundColor(Color.TRANSPARENT), 200);
+
+                dialog.dismiss();
+                showTimePickerDialog(year, month, dayOfMonth);
+            } else {
+                // ❌ Show unavailable message
+                Toast.makeText(this, "❌ Barber not available on said day", Toast.LENGTH_SHORT).show();
+
+                // Subtle red flash for feedback
+                view.setBackgroundColor(Color.parseColor("#FFCCCC"));
+                view.postDelayed(() -> view.setBackgroundColor(Color.TRANSPARENT), 300);
+            }
+        });
+
+        dialog.show();
     }
 
+
+
+
+    private boolean isAvailableDay(String dayName) {
+        if (availableDays == null) return false;
+        for (String d : availableDays) {
+            if (d.equalsIgnoreCase(dayName)) return true;
+        }
+        return false;
+    }
+
+    private Calendar findNextAvailableDate(Calendar fromDate) {
+        Calendar nextDate = (Calendar) fromDate.clone();
+        do {
+            nextDate.add(Calendar.DAY_OF_MONTH, 1);
+        } while (!isAvailableDay(new SimpleDateFormat("EEEE", Locale.US).format(nextDate.getTime())));
+        return nextDate;
+    }
+
+    /**
+     * Time Picker
+     */
     private void showTimePickerDialog(int year, int month, int day) {
         final Calendar now = Calendar.getInstance();
         final Calendar selectedDate = Calendar.getInstance();
         selectedDate.set(year, month, day);
 
-        // Default time 8:00 AM
-        int hour = 8;
-        int minute = 0;
-
-        // If the selected date is today, default to next available hour/minute
+        int hour = 8, minute = 0;
         if (isToday(selectedDate)) {
             hour = now.get(Calendar.HOUR_OF_DAY);
-            minute = now.get(Calendar.MINUTE) + 1; // +1 minute to avoid immediate past
+            minute = now.get(Calendar.MINUTE) + 1;
             if (hour < 8) hour = 8;
             if (hour > 16) hour = 16;
-            if (hour == 16) minute = 0; // max 4:00 PM
+            if (hour == 16) minute = 0;
         }
 
-        @SuppressLint("SetTextI18n") TimePickerDialog timePickerDialog = new TimePickerDialog(this,
+        @SuppressLint("SetTextI18n")
+        TimePickerDialog timePickerDialog = new TimePickerDialog(this,
                 (view, selectedHour, selectedMinute) -> {
-                    // Check working hours
                     if (selectedHour < 8 || selectedHour > 16 || (selectedHour == 16 && selectedMinute > 0)) {
                         Toast.makeText(this, "Please select a time between 8:00 AM and 4:00 PM", Toast.LENGTH_SHORT).show();
                         showTimePickerDialog(year, month, day);
                         return;
                     }
 
-                    // If today, ensure not in past
                     Calendar selectedDateTime = Calendar.getInstance();
                     selectedDateTime.set(year, month, day, selectedHour, selectedMinute);
 
@@ -159,7 +204,6 @@ public class HairstyleConfirm extends AppCompatActivity {
         timePickerDialog.show();
     }
 
-    // Helper method
     private boolean isToday(Calendar cal) {
         Calendar today = Calendar.getInstance();
         return cal.get(Calendar.YEAR) == today.get(Calendar.YEAR)
@@ -169,11 +213,11 @@ public class HairstyleConfirm extends AppCompatActivity {
 
     private void checkAndSaveAppointment() {
         String customername = customerNameInput.getText().toString();
-        String branch = branchInput.getSelectedItem() != null ? branchInput.getSelectedItem().toString() : "";
-        String haircut = haircutNameInput.getSelectedItem() != null ? haircutNameInput.getSelectedItem().toString() : "";
-        String color = haircutColorInput.getSelectedItem() != null ? haircutColorInput.getSelectedItem().toString() : "";
-        String shave = shaveInput.getSelectedItem() != null ? shaveInput.getSelectedItem().toString() : "";
-        String barber = barberInput.getSelectedItem() != null ? barberInput.getSelectedItem().toString() : "";
+        String branch = branchInput.getText().toString();
+        String haircut = haircutNameInput.getText().toString();
+        String color = haircutColorInput.getText().toString();
+        String shave = shaveInput.getText().toString();
+        String barber = barberInput.getText().toString();
         String dateTime = datetimePicker.getText().toString();
 
         if (branch.isEmpty() || haircut.isEmpty() || barber.isEmpty() || dateTime.isEmpty()) {
@@ -181,8 +225,7 @@ public class HairstyleConfirm extends AppCompatActivity {
             return;
         }
 
-        // First, check if the barber's queue limit has been reached
-        new CheckBarberQueueTask(customername, branch, haircut, color, shave, barber, dateTime).execute();
+        showConfirmDialog(customername, branch, haircut, color, shave, barber, dateTime);
     }
 
     private void showConfirmDialog(final String customername, final String branch, final String haircut,
@@ -201,10 +244,11 @@ public class HairstyleConfirm extends AppCompatActivity {
         String[] dateTimeParts = dateTime.split(" ");
         String date = dateTimeParts[0];
         String timeslot = dateTimeParts[1];
-
         new SaveAppointmentTask(customername, haircut, color, shave, date, timeslot, branch, barber).execute();
     }
 
+    @RequiresApi(api = Build.VERSION_CODES.TIRAMISU)
+    @SuppressWarnings("SameParameterValue")
     private String fetchData(String requestUrl, Map<String, String> postData) {
         HttpURLConnection connection = null;
         BufferedReader reader = null;
@@ -219,15 +263,15 @@ public class HairstyleConfirm extends AppCompatActivity {
             if (postData != null && !postData.isEmpty()) {
                 connection.setDoOutput(true);
                 OutputStream os = connection.getOutputStream();
-                BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(os, "UTF-8"));
+                BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(os, StandardCharsets.UTF_8));
                 StringBuilder result = new StringBuilder();
                 boolean first = true;
                 for (Map.Entry<String, String> entry : postData.entrySet()) {
                     if (first) first = false;
                     else result.append("&");
-                    result.append(URLEncoder.encode(entry.getKey(), "UTF-8"));
+                    result.append(URLEncoder.encode(entry.getKey(), StandardCharsets.UTF_8));
                     result.append("=");
-                    result.append(URLEncoder.encode(entry.getValue(), "UTF-8"));
+                    result.append(URLEncoder.encode(entry.getValue(), StandardCharsets.UTF_8));
                 }
                 writer.write(result.toString());
                 writer.flush();
@@ -257,236 +301,6 @@ public class HairstyleConfirm extends AppCompatActivity {
         return null;
     }
 
-    // ---------------- ASYNC TASKS ---------------- //
-
-    @SuppressLint("StaticFieldLeak")
-    private class FetchBarbershopsTask extends AsyncTask<Void, Void, String> {
-        @Override
-        protected String doInBackground(Void... voids) {
-            return fetchData(BASE_URL + "get_barbershops.php", null);
-        }
-
-        @Override
-        protected void onPostExecute(String result) {
-            if (result != null) {
-                try {
-                    JSONArray jsonArray = new JSONArray(result);
-                    barbershopNames.clear();
-                    barbershopMap.clear();
-                    for (int i = 0; i < jsonArray.length(); i++) {
-                        JSONObject shop = jsonArray.getJSONObject(i);
-                        String name = shop.getString("name");
-                        int shopID = shop.getInt("shopID");
-                        barbershopNames.add(name);
-                        barbershopMap.put(name, shopID);
-                    }
-                    ArrayAdapter<String> adapter = new ArrayAdapter<>(HairstyleConfirm.this,
-                            android.R.layout.simple_spinner_item, barbershopNames);
-                    adapter.setDropDownViewResource(android.R.layout.simple_spinner_dropdown_item);
-                    branchInput.setAdapter(adapter);
-                } catch (JSONException e) {
-                    Log.e("FetchBarbershopsTask", "JSON parsing error: " + e.getMessage());
-                }
-            } else {
-                Toast.makeText(HairstyleConfirm.this, "Failed to fetch barbershops.", Toast.LENGTH_SHORT).show();
-            }
-        }
-    }
-
-    @SuppressLint("StaticFieldLeak")
-    private class FetchHaircutsTask extends AsyncTask<String, Void, String> {
-        @Override
-        protected String doInBackground(String... params) {
-            String shopID = params[0];
-            Map<String, String> postData = new HashMap<>();
-            postData.put("shopID", shopID);
-            return fetchData(BASE_URL + "get_haircuts.php", postData);
-        }
-
-        @Override
-        protected void onPostExecute(String result) {
-            if (result != null) {
-                try {
-                    JSONObject jsonResponse = new JSONObject(result);
-                    if ("fail".equals(jsonResponse.optString("status"))) {
-                        Toast.makeText(HairstyleConfirm.this, jsonResponse.getString("message"), Toast.LENGTH_LONG).show();
-                        return;
-                    }
-
-                    haircutNames.clear();
-                    haircutColors.clear();
-                    JSONArray namesArray = jsonResponse.optJSONArray("haircut_names");
-                    JSONArray colorsArray = jsonResponse.optJSONArray("color_names");
-
-                    if (namesArray != null) {
-                        for (int i = 0; i < namesArray.length(); i++) {
-                            haircutNames.add(namesArray.getString(i));
-                        }
-                    }
-
-                    if (colorsArray != null) {
-                        for (int i = 0; i < colorsArray.length(); i++) {
-                            haircutColors.add(colorsArray.getString(i));
-                        }
-                    }
-
-                    ArrayAdapter<String> haircutAdapter = new ArrayAdapter<>(HairstyleConfirm.this,
-                            android.R.layout.simple_spinner_item, haircutNames);
-                    haircutAdapter.setDropDownViewResource(android.R.layout.simple_spinner_dropdown_item);
-                    haircutNameInput.setAdapter(haircutAdapter);
-
-                    ArrayAdapter<String> colorAdapter = new ArrayAdapter<>(HairstyleConfirm.this,
-                            android.R.layout.simple_spinner_item, haircutColors);
-                    colorAdapter.setDropDownViewResource(android.R.layout.simple_spinner_dropdown_item);
-                    haircutColorInput.setAdapter(colorAdapter);
-
-                } catch (JSONException e) {
-                    Log.e("FetchHaircutsTask", "JSON parsing error: " + e.getMessage());
-                }
-            } else {
-                Toast.makeText(HairstyleConfirm.this, "Failed to fetch haircuts.", Toast.LENGTH_SHORT).show();
-            }
-        }
-    }
-
-    @SuppressLint("StaticFieldLeak")
-    private class FetchBarbersTask extends AsyncTask<String, Void, String> {
-        @Override
-        protected String doInBackground(String... params) {
-            String shopID = params[0];
-            Map<String, String> postData = new HashMap<>();
-            postData.put("shopID", shopID);
-            return fetchData(BASE_URL + "get_barbers.php", postData);
-        }
-
-        @Override
-        protected void onPostExecute(String result) {
-            if (result != null) {
-                try {
-                    JSONArray jsonArray = new JSONArray(result);
-                    barberNames.clear();
-                    for (int i = 0; i < jsonArray.length(); i++) {
-                        JSONObject barber = jsonArray.getJSONObject(i);
-                        barberNames.add(barber.getString("FirstName") + " " + barber.getString("LastName"));
-                    }
-                    ArrayAdapter<String> adapter = new ArrayAdapter<>(HairstyleConfirm.this,
-                            android.R.layout.simple_spinner_item, barberNames);
-                    adapter.setDropDownViewResource(android.R.layout.simple_spinner_dropdown_item);
-                    barberInput.setAdapter(adapter);
-                } catch (JSONException e) {
-                    Log.e("FetchBarbersTask", "JSON parsing error: " + e.getMessage());
-                }
-            } else {
-                Toast.makeText(HairstyleConfirm.this, "Failed to fetch barbers.", Toast.LENGTH_SHORT).show();
-            }
-        }
-    }
-
-    @SuppressLint("StaticFieldLeak")
-    private class CheckBarberQueueTask extends AsyncTask<Void, Void, String> {
-        private final String customername, branch, haircut, color, shave, barber, dateTime;
-
-        CheckBarberQueueTask(String customername, String branch, String haircut,
-                             String color, String shave, String barber, String dateTime) {
-            this.customername = customername;
-            this.branch = branch;
-            this.haircut = haircut;
-            this.color = color;
-            this.shave = shave;
-            this.barber = barber;
-            this.dateTime = dateTime;
-        }
-
-        @Override
-        protected String doInBackground(Void... voids) {
-            Map<String, String> postData = new HashMap<>();
-            postData.put("barber", barber);
-            return fetchData(BASE_URL + "check_barber_queue.php", postData);
-        }
-
-        @Override
-        protected void onPostExecute(String result) {
-            if (result != null) {
-                try {
-                    JSONObject jsonResponse = new JSONObject(result);
-                    String status = jsonResponse.getString("status");
-                    String message = jsonResponse.getString("message");
-
-                    if ("full".equals(status)) {
-                        Toast.makeText(HairstyleConfirm.this, message, Toast.LENGTH_LONG).show();
-                    } else if ("available".equals(status)) {
-                        // Barber is available, now check for existing user appointments
-                        new CheckActiveAppointmentTask(customername, branch, haircut, color, shave, barber, dateTime).execute();
-                    } else {
-                        Toast.makeText(HairstyleConfirm.this, message, Toast.LENGTH_SHORT).show();
-                    }
-                } catch (JSONException e) {
-                    Log.e("CheckBarberQueueTask", "JSON parsing error: " + e.getMessage());
-                    Toast.makeText(HairstyleConfirm.this, "Error checking barber queue.", Toast.LENGTH_SHORT).show();
-                }
-            } else {
-                Toast.makeText(HairstyleConfirm.this, "Server error during queue check.", Toast.LENGTH_SHORT).show();
-            }
-        }
-    }
-
-    @SuppressLint("StaticFieldLeak")
-    private class CheckActiveAppointmentTask extends AsyncTask<Void, Void, String> {
-        private final String customername, branch, haircut, color, shave, barber, dateTime;
-
-        CheckActiveAppointmentTask(String customername, String branch, String haircut,
-                                   String color, String shave, String barber, String dateTime) {
-            this.customername = customername;
-            this.branch = branch;
-            this.haircut = haircut;
-            this.color = color;
-            this.shave = shave;
-            this.barber = barber;
-            this.dateTime = dateTime;
-        }
-
-        @Override
-        protected String doInBackground(Void... voids) {
-            Map<String, String> postData = new HashMap<>();
-            postData.put("customername", customername);
-            postData.put("branch", branch);
-            postData.put("haircut", haircut);
-            postData.put("color", color);
-            postData.put("shave", shave);
-            postData.put("barber", barber);
-            postData.put("dateTime", dateTime);
-            return fetchData(BASE_URL + "check_active_appointment.php", postData);
-        }
-
-        @Override
-        protected void onPostExecute(String result) {
-            if (result != null) {
-                try {
-                    JSONObject jsonResponse = new JSONObject(result);
-                    String status = jsonResponse.getString("status");
-                    String message = jsonResponse.getString("message");
-
-                    if ("exists".equals(status)) {
-                        new AlertDialog.Builder(HairstyleConfirm.this)
-                                .setTitle("\uD83D\uDEA8 Appointment Exists \uD83D\uDEA8")
-                                .setMessage(message)
-                                .setPositiveButton("OK", null)
-                                .show();
-                    } else if ("not_exists".equals(status)) {
-                        HairstyleConfirm.this.showConfirmDialog(customername, branch, haircut, color, shave, barber, dateTime);
-                    } else {
-                        Toast.makeText(HairstyleConfirm.this, message, Toast.LENGTH_SHORT).show();
-                    }
-                } catch (JSONException e) {
-                    Log.e("CheckTask", "JSON parsing error: " + e.getMessage());
-                    Toast.makeText(HairstyleConfirm.this, "Error checking for active appointment.", Toast.LENGTH_SHORT).show();
-                }
-            } else {
-                Toast.makeText(HairstyleConfirm.this, "Server error.", Toast.LENGTH_SHORT).show();
-            }
-        }
-    }
-
     @SuppressLint("StaticFieldLeak")
     private class SaveAppointmentTask extends AsyncTask<Void, Void, String> {
         private final String customername, haircut, color, shave, date, timeslot, branch, barber;
@@ -503,6 +317,7 @@ public class HairstyleConfirm extends AppCompatActivity {
             this.barber = barber;
         }
 
+        @RequiresApi(api = Build.VERSION_CODES.TIRAMISU)
         @Override
         protected String doInBackground(Void... voids) {
             Map<String, String> postData = new HashMap<>();
@@ -529,7 +344,6 @@ public class HairstyleConfirm extends AppCompatActivity {
                     Toast.makeText(HairstyleConfirm.this, message, Toast.LENGTH_LONG).show();
 
                     if ("success".equals(status)) {
-                        // Go back to HomepageActivity
                         Intent intent = new Intent(HairstyleConfirm.this, HomepageActivity.class);
                         intent.addFlags(Intent.FLAG_ACTIVITY_CLEAR_TOP | Intent.FLAG_ACTIVITY_NEW_TASK);
                         startActivity(intent);
